src/test/ui/extenv/extenv-not-defined-default.stderr
error: environment variable `__HOPEFULLY_NOT_DEFINED__` not defined
  --> $DIR/extenv-not-defined-default.rs:2:5
   |
LL |     env!("__HOPEFULLY_NOT_DEFINED__");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

